--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Mon Pokédex en MithrilJS</title>
+  <title>My Pokédex with MithrilJS</title>
 </head>
 <body>
-  
   <script src="public/index.js"></script>
 </body>
 </html>
